LPD-91075 portal-security-audit-rest-* - rename context to contextName on the schema and filter
