# modules/apps/portal-security-audit/portal-security-audit-rest-impl/rest-openapi.yaml
@@ -26,7 +26,7 @@ components:
                         IP address of the client that initiated the audited request.
                     readOnly: true
                     type: string
-                context:
+                contextName:
                     description:
                         Logical segregation key (e.g., subsystem or feature area that emitted the event).
                     readOnly: true
@@ -95,7 +95,7 @@ paths:
             operationId: getAuditEventsPage
             parameters:
                 -   in: query
-                    name: context
+                    name: contextName
                     schema:
                         type: string
                 -   in: query
